Prevented spell titles from overflowing their item in spell lists
closes #83

--- a/rpg-docs/client/views/character/spells/spells.css
+++ b/rpg-docs/client/views/character/spells/spells.css
@@ -78,6 +78,20 @@
 	margin-left: 16px;
 }
 
+.spell.item > div > div {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.spell.item > div {
+	min-width: 0;
+}
+
+.spell.item iron-icon {
+	flex-shrink: 0;
+}
+
 .spellLevel {
 	-webkit-backface-visibility: hidden;
 	-webkit-transform: translateX(0);
